[metadata]
license_files = LICENSE.txt

[bdist_wheel]
universal=1

[aliases]
test=pytest 
doc=build_sphinx

[build_sphinx]
project = luisy
source_dir = docs/source

[tool:pytest]
addopts = --cov luisy --cov-report term --flake8 --verbose
flake8-max-line-length = 100

[flake8]
max-line-length = 100
exclude=Makefile,README.md,requirements.txt,CHANGELOG.rst,setup.cfg,setup.py,VERSION,*.rst,*.txt,*.yaml,*.in
